syntax="proto3";

package proto;

option go_package = "cchoice/pb";

message User {
   string id = 1;
   bool otp_enabled = 2;
}

message RegisterRequest {
   string first_name = 1;
   string middle_name = 2;
   string last_name = 3;
   string email = 4;
   string password = 5;
   string confirm_password = 6;
   string mobile_no = 7;
}

message RegisterResponse {
   string user_id = 1;
   string token = 2;
}

message GetUserByIDRequest {
   string user_id = 1;
}

message GetUserByIDResponse {
   User user = 1;
}

service UserService {
   rpc Register(RegisterRequest) returns (RegisterResponse) {}
   rpc GetUserByID(GetUserByIDRequest) returns (GetUserByIDResponse) {}
}
